Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17867

Clang + FlatDark theme: Wrong highlighting color for the standard types after editing line

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.4.0-beta1
    • Qt Creator 4.2.1, Qt Creator 4.3.0-beta1, Qt Creator 4.3.0-rc1
    • C/C++/Obj-C++ Support
    • None
    • debian testing amd64 with kf5/plasma5,
      qtc downloaded from the site.
    • db11c01df807988b5135b4d33d600869b52f0fa8

      After starting a project I see that standard types (like int, double, ...) are highlighted as keywords. However if change a line with them than color changed as they're types.
      See the screenshot – lines marked as changed contain 'double' highlighted as a type. Unchanged line contains 'double' highlighted as a keyword.

        For Gerrit Dashboard: QTCREATORBUG-17867
        # Subject Branch Project Status CR V

            con Eike Ziller
            gbug Gena Bug
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes